<resources>
    <string name="app_name">HentaiPazzle</string>

    <string name="back_btn">Back</string>
    <string name="btn_change_language">Change language</string>
    <string name="btn_change_theme">Change theme</string>

    <string name="btn_play">Play</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_gallery">Gallery</string>

    <string name="game_version">Ver.0.250.10</string>

    <string name="Settings">Settings</string>

</resources>